--- a/package.json
+++ b/package.json
@@ -4,12 +4,26 @@
   "description": "A Friend Official LINE bot",
   "main": "index.js",
   "scripts": {
-    "build-sdk": "cd ../../; npm i; npm run build",
     "start": "node ."
   },
   "dependencies": {
     "@line/bot-sdk": "../../",
+    "canvas": "^1.6.10",
     "express": "^4.16.2",
-    "ngrok": "^2.3.0"
+    "google": "^1.0.1",
+    "ngrok": "^2.3.0",
+    "qs": "^6.5.2",
+    "fs": "0.0.2",
+    "get-youtube-id": "^1.0.0",
+    "common-tags": "^1.8.0",
+    "gif-search": "^2.0.1",
+    "math-expression-evaluator": "^1.2.17",
+    "jimp": "^0.2.28",
+    "ms": "^2.1.1",
+    "requests": "^0.2.2",
+    "simple-youtube-api": "^5.0.2",
+    "youtube-info": "^1.2.0",
+    "ytdl-core": "^0.21.1"
+    
   }
 }
