--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "get-youtube-id": "^1.0.0",
     "common-tags": "^1.8.0",
     "gif-search": "^2.0.1",
+    "google-translate-api": "^2.3.0",
     "math-expression-evaluator": "^1.2.17",
     "jimp": "^0.2.28",
     "ms": "^2.1.1",
